examples/test/testpolicy8151.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8151
  namespace: namespace105
spec:
  podSelector:
    matchLabels:
      key5: value44
      key2: value33
      key7: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value42
          key6: value16
          key30: value5
      podSelector:
        matchLabels:
          key5: value33
